// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="default"
>
  <section
    className="ant-layout {}"
    id="default_layout"
  >
    <main
      className="ant-layout-content {}"
      id="default_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Render properties.content 1`] = `
<section
  className="ant-layout {\\"style\\":{\\"minHeight\\":\\"100vh\\"}}"
  id="properties.content"
>
  <section
    className="ant-layout {}"
    id="properties.content_layout"
  >
    <main
      className="ant-layout-content {}"
      id="properties.content_content"
    >
      <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>
    </main>
  </section>
</section>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;
